
SET(HEADERS "")
SET(C_HEADERS "")
SET(SOURCES "")

FILE(GLOB HEADERS *.hpp)
FILE(GLOB SOURCES *.cpp)
FILE(GLOB C_HEADERS *.h)

TRIBITS_ADD_LIBRARY(
    kokkoscore_impl
    NOINSTALLHEADERS ${HEADERS} ${C_HEADERS}
    SOURCES ${SOURCES}
    DEPLIBS
    )

SET(TRILINOS_INCDIR ${CMAKE_INSTALL_PREFIX}/${${PROJECT_NAME}_INSTALL_INCLUDE_DIR})

INSTALL(FILES ${HEADERS} DESTINATION ${TRILINOS_INCDIR}/impl/)

